# ArchXplore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DRAMSim3.cmake  buildMacro.cmake  gem5.cmake  iceoryx.cmake  pybind11.cmake  qemu.cmake  sparta.cmake
configs/: histogram_test.py  simpleCPU.py
doc/: ArchXplore.md
ext/riscv-isa-sim/: .gitignore  CMakeLists.txt  env.sh  run_tests.py
ext/riscv-isa-sim/abstract_processor/: AbstractProcessorBase.hpp  CMakeLists.txt  InstrBase.hpp  MemPkt.hpp  SpikeAbstractProcessor.cc  SpikeAbstractProcessor.hpp  fake_regfile.hpp  memif.hpp  spike_cfg.hpp  util.hpp
ext/riscv-isa-sim/fesvr/: CMakeLists.txt
ext/riscv-isa-sim/playground/: CMakeLists.txt  Makefile  add  add.cpp  fake_uncore.hpp  hello  main.cpp
ext/riscv-isa-sim/riscv/: CMakeLists.txt  clint.cc  decode.h  decode_macros.h  execute.cc  insn_template.cc  mmu.h  processor.cc  processor.h  rocc.cc  rocc.h  trap.h
ext/riscv-isa-sim/softfloat/: CMakeLists.txt
include/: ClockedObject.hpp  Types.hpp  clockedObject.hpp  types.hpp
include/cpu/: AbstractCPU.hpp  PthreadAPI.hpp  StaticInst.hpp  SyscallAPI.hpp  ThreadEvent.hpp  abstractCPU.hpp  threadEvent.hpp
include/cpu/simple/: SimpleCPU.hpp  simpleCPU.hpp
include/isa/: traceInsn.h  traceInsn.hpp
include/isa/RISCV/: dynInsn.h
include/iss/: AbstractISS.hpp  EventPublisher.hpp  EventSubscriber.hpp  IPCConfig.hpp  LockFreeQueue.hpp  abstractISS.hpp  baseISS.h  insnTunnel.h  insnTunnel.hpp  systemSyncEvent.hpp  type.hpp
include/iss/qemu/: QemuISS.hpp  qemu-plugin.h  qemuEmulator.h  qemuISS.hpp  qemuInterface.h  qemuInterface.hpp  qemuInterface.hpp.back
include/iss/qemu/include/: qemu-plugin.h  qemuEmulator.h
include/iss/qemu/instrumentation/: InstrumentPlugin.hpp
include/python/: CommonModules.hpp  EmbeddedModule.hpp  SpartaModules.hpp  commonModules.hpp  embeddedModule.hpp  pySpartaLogTap.hpp  spartaModules.hpp
include/system/: AbstractSystem.hpp  Process.hpp  abstractSystem.hpp  pesudoSystem.hpp
include/system/qemu/: QemuSystem.hpp  qemuParallelSystem.hpp  qemuSystem.hpp
include/uncore/: flags.hpp  mem_if.hpp  mem_pkt.hpp
include/uncore/cache/: agu_if.hpp  basic_cache_block.hpp  basic_cache_line.hpp  basic_cache_set.hpp  default_agu.hpp  replacement_if.hpp  simple_cache.hpp  treeplru.hpp
include/uncore/memory/: dramsim3.hpp  dramsim3_wrapper.hpp
include/utils/: Subprocess.hpp  ThreadPool.hpp  common.hpp  subprocess.h  threadPool.hpp  threadSafeQueue.hpp
python/util/: archXplorePy.py  stubgen.py  test.py
src/: CMakeLists.txt  ClockedObject.cpp
src/cpu/: AbstractCPU.cpp  CMakeLists.txt  abstractCPU.cpp
src/cpu/simple/: CMakeLists.txt  SimpleCPU.cpp  simpleCPU.cpp
src/iss/: AbstractISS.cpp  CMakeLists.txt  IPCService.cpp  abstractISS.cpp
src/iss/qemu/: CMakeLists.txt  InstrumentPlugin.cpp  QemuISS.cpp  qemuISS.cpp  qemuInterface.cpp  qemuInterface.cpp.back  qemuInterface_plugin.cpp  qemuInterface_plugin.cpp.back
src/python/: ArchXplorePy.cpp  CMakeLists.txt  EmbeddedModule.cpp  archXplorePy.cpp  embeddedModule.cpp  issModules.cpp  parameterNoob.hpp  spartaModules.cpp  systemModules.cpp  testpointer.cpp
src/system/: AbstractSystem.cpp  CMakeLists.txt  abstractSystem.cpp
src/system/qemu/: CMakeLists.txt
src/uncore/: CMakeLists.txt  dramsim3.cpp  dramsim3_wrapper.cpp  simple_cache.cpp
tests/: CMakeLists.txt
tests/InterProcessEvent/: CMakeLists.txt  Publisher.cpp  Subscriber.cpp
tests/QemuPerf/: CMakeLists.txt  qemuPerf_test.cpp
tests/SpartaInPython/: .gitignore  CMakeLists.txt  Ports_example.cpp  Ports_example.py
tests/SpartaSchedulerPerf/: CMakeLists.txt
tests/ThreadPool/: CMakeLists.txt  ThreadPool_test.cpp
tests/ThreadSafeQueue/: CMakeLists.txt  ThreadSafeQueue_test.cpp
tests/insnTunnel/: CMakeLists.txt  insnTunnel_test.cpp
tests/qemuInterface/: .gitignore  CMakeLists.txt  Makefile  hello  hello.cpp  qemuInterface_test  qemuInterface_test.cpp  rv32ui-p-add
tests/qemuLinux/: .gitignore  Makefile  qemuLinux_test.cpp
tests/qemuPerf/: CMakeLists.txt  qemuPerf_test.cpp  spartaSchedulerPerf_test.cpp
tests/spartaInPython/: CMakeLists.txt  Device.py  Ports_example.cpp  Ports_example.hpp  Ports_example.py  packedPysparta.py  pybindSparta.cpp
tests/spartaSchedulerPerf/: CMakeLists.txt  spartaSchedulerPerf_test.cpp
tests/threadPool/: CMakeLists.txt  threadPool_test.cpp
tests/threadSafeQueue/: CMakeLists.txt  threadSafeQueue_test.cpp
tests/uncoreTest/: CMakeLists.txt  dramsim3_test.cpp  dramsim3_test.py  fake_memory.cpp  fake_memory.hpp  random_tester.cpp  random_tester.hpp
